<resources>
    <string name="app_name">Ahorra</string>
    <string name="carLblInicio">Iniciando ...</string>
    <string name="sesTxtCorreo">Correo</string>
    <string name="sesTxtClave">Clave</string>
    <string name="sesChkRecordar">Recordar sesión</string>
    <string name="sesBtnIngresar">Ingresar</string>
    <string name="sesBtnSalir">Salir</string>
    <string name="sesLblRegistro">Registrate</string>
    <string name="regTxtDni">Dni</string>
    <string name="regTxtNombre">Nombre</string>
    <string name="regTxtApellido">Apellido</string>
    <string name="regBtnCamara">Camara</string>
    <string name="regTxtFechaNac">Fecha de Nacimiento</string>
    <string name="regLblTitulo">REGISTRO</string>
    <string name="lblSexo">Sleccione su sexo</string>
    <string name="regRbtNoDefinido">Sin Definir</string>
    <string name="regRbtMasculino">Masculino</string>
    <string name="regRbtFemecnino">Femenino</string>
    <string name="regTxtCorreo">Correo</string>
    <string name="regTxtClave">Clave</string>
    <string name="regTxtClave2">Confirmar Clave</string>
    <string name="lblDistrito">distrito:</string>
    <string name="regChkTerminos">Terminos y condiciones</string>
    <string name="regBtnCrear">Crear</string>
    <string name="regBtnRegresar">Regresar</string>
    <string name="txtSaldo">S/ 1250.00</string>
    <string name="txtIngresos">S/ 2500.00</string>
    <string name="txtGastos">S/ 1250.00</string>
    <string name="txtPorcentaje">60%</string>
    <string name="txtInicio">S/600.00</string>
    <string name="txtFinal">S/1000.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RegGasBtnGasto">Gasto</string>
    <string name="RegGasBtnIngreso">Ingreso</string>
    <string name="txRegistroGastos">S/150.00</string>
    <string name="RegGasBtnRegistrarGasto">Registrar Gasto</string>
    <string name="txRegistroIngresos">S/1000.00</string>
    <string name="RegGasBtnRegistrarIngreso">Registrar Ingreso</string>
    <string name="txtResumenAhorros">S/1250.00</string>
    <string name="BtnCrearNuevaMeta">+ Crear Nueva Meta</string>
    <string name="inicio">Inicio</string>
    <string name="metas">Metas</string>
    <string name="aprender">aprender</string>
    <string name="historial">historial</string>
    <string name="abrir_metas">+</string>
    <string name="txtLblPreferencias">Preferencias</string>
    <string name="bieLblSaludo">Bienvenido</string>
    <string name="Progreso_perol">35% de la academia completada</string>
    <string name="HistTxtBusqueda">Buscar transacción...</string>

    <string name="anadir_ahorro_titulo">Añadir Ahorro a Meta</string>
    <string name="anadir_ahorro_elegir_meta">Elige a qué meta quieres transferir</string>
    <string name="anadir_ahorro_monto">Monto a Añadir</string>
    <string name="anadir_ahorro_confirmar">Confirmar Ahorro</string>

    <string name="anadir_ahorro_resumen_plantilla">Tu meta %1$s pasará a tener S/ %,.2f ahorrados.</string>



    <string name="perfil_titulo">Mi Perfil y Configuración</string>
    <string name="perfil_seccion_cuenta">Datos Personales y Cuenta</string>
    <string name="perfil_usuario_ejemplo">Usuario Ejemplo</string>
    <string name="perfil_email_ejemplo">usuario.ejemplo@email.com</string>
    <string name="perfil_cambiar_pass">Cambiar Contraseña</string>
    <string name="perfil_metodos_reg">Métodos de Registro</string>
    <string name="perfil_eliminar_cuenta">Eliminar Cuenta</string>

    <string name="perfil_seccion_seguridad">Seguridad y Datos Personales</string>
    <string name="perfil_datos_encriptados">Datos Encriptados</string>
    <string name="perfil_politica_priv">Política de Privacidad</string>
    <string name="perfil_terminos_cond">Términos y Condiciones</string>
    <string name="perfil_notificaciones">Notificaciones de Alerta</string>

    <string name="perfil_seccion_ayuda">Ayuda y Soporte</string>
    <string name="perfil_enviar_sug">Enviar Sugerencias/Reportar Error</string>

    <string name="perfil_cerrar_sesion">Cerrar Sesión</string>

</resources>