<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regLblTitulo"
            android:layout_marginVertical="5dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/regImgFoto"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:src="@drawable/foto"/>
                <Button
                    android:id="@+id/regBtnCamara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/regBtnCamara"
                    android:textAllCaps="false"
                    android:backgroundTint="#22C55E"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/regTxtDni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/regTxtDni"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/regTxtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="100"
                        android:hint="@string/regTxtNombre"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/regTxtApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="100"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/regTxtApellido"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/regTxtFechaNac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="date"
                        android:maxLength="10"
                        android:hint="@string/regTxtFechaNac"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblSexo"
            android:layout_margin="5dp"
            android:layout_marginHorizontal="5dp"
            android:textSize="15sp"/>
        <RadioGroup
            android:id="@+id/regGrpSesp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/regRbtNoDefinido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/regRbtNoDefinido"/>
            <RadioButton
                android:id="@+id/regRbtMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regRbtMasculino"/>
            <RadioButton
                android:id="@+id/regRbtFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regRbtFemecnino"/>
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp">
            <EditText
                android:id="@+id/regTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtCorreo"
                android:inputType="textEmailAddress"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="5dp">
            <EditText
                android:id="@+id/regTxtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/regTxtClave"
                android:inputType="textEmailAddress"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginHorizontal="5dp">
            <EditText
                android:id="@+id/regTxtClave2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtClave2"
                android:inputType="textEmailAddress"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDistrito"
            android:layout_margin="5dp"
            android:layout_marginHorizontal="5dp"
            android:textSize="15sp"/>
        <Spinner
            android:id="@+id/regCboDistrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp"/>
        <CheckBox
            android:id="@+id/regChkTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regChkTerminos"
            android:layout_marginHorizontal="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="5dp">
            <Button
                android:id="@+id/regBtnCrear"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/regBtnCrear"
                android:layout_marginRight="15dp"
                android:textAllCaps="false"
                android:backgroundTint="#22C55E"/>/>

            <Button
                android:id="@+id/regBtnRegresar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/regBtnRegresar"
                android:textAllCaps="false"
                android:backgroundTint="#22C55E"/>/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>