<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".actividades.SesionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="50dp"
            android:src="@drawable/carga"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/sesTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:hint="@string/sesTxtCorreo"
                android:inputType="textEmailAddress"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/sesTxtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sesTxtClave"
                android:inputType="textPassword"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/sesChkRecordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/sesChkRecordar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/sesBtnIngresar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/sesBtnIngresar"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/sesBtnSalir"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/sesBtnSalir"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
        </LinearLayout>
        <TextView
            android:id="@+id/sesLblRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sesLblRegistro"
            android:gravity="center_horizontal"
            android:textColor="@color/purple_500"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>