<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragmentos.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="5">

        <!-- INICIO -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/frgMenImbInicio"
                android:layout_width="40dp"
                android:layout_height="33dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/inicio"
                android:src="@drawable/casa"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inicio"
                android:textSize="12sp"
                android:textColor="#000000"/>
        </LinearLayout>

        <!-- METAS -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/frgMenImbMetas"
                android:layout_width="40dp"
                android:layout_height="33dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/metas"
                android:src="@drawable/premios"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Metas"
                android:textSize="12sp"
                android:textColor="#000000"/>
        </LinearLayout>

        <!-- APRENDER -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/frgMenImbAprender"
                android:layout_width="40dp"
                android:layout_height="33dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/aprender"
                android:src="@drawable/aprende"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aprender"
                android:textSize="12sp"
                android:textColor="#000000"/>
        </LinearLayout>

        <!-- HISTORIAL -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/frgMenImbHistorial"
                android:layout_width="40dp"
                android:layout_height="33dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/historial"
                android:src="@drawable/historial"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Historial"
                android:textSize="12sp"
                android:textColor="#000000"/>
        </LinearLayout>

        <!-- PERFIL -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/frgMenImbPerfil"
                android:layout_width="40dp"
                android:layout_height="33dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/Perfil"
                android:src="@drawable/perfil"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perfil"
                android:textSize="12sp"
                android:textColor="#000000"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
